--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,35 +1,54 @@
 .App {
   text-align: center;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  background-image: url('retrowave-neon.jpg');
+  background-size: cover;
+  background-position: center;
 }
 
 .App-header {
-  background-color: #282c34;
-  padding: 1rem;
+  height: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
   color: white;
 }
 
 .App-main {
+  flex: 1;
   display: flex;
-  justify-content: space-around;
-  padding: 1rem;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
 }
 
-.game-area {
+.PongCanvas-container, .Chat-container {
+  background-color: #282c34;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  overflow: hidden;
   flex: 1;
-  background-color: #f0f0f0;
-  border: 2px solid #ccc;
-  height: 400px;
 }
 
-.chat-area {
-  flex: 1;
-  background-color: #f0f0f0;
-  border: 2px solid #ccc;
-  height: 400px;
+.PongCanvas-container {
+  margin-right: 20px;
+  margin-top: auto;
+}
+
+.Chat-container {
+  margin-left: 20px;
+  margin-top: auto;
 }
 
 .App-footer {
-  background-color: #282c34;
-  padding: 1rem;
+  background-color: #0a2150;
+  height: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   color: white;
+  border-top: 2px solid #0ff;
 }
