--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,54 +1,68 @@
-.App {
-  text-align: center;
+.Main {
   height: 100%;
-  display: flex;
-  flex-direction: column;
-  background-image: url('retrowave-neon.jpg');
-  background-size: cover;
-  background-position: center;
+  display: grid;
 }
 
 .App-header {
-  height: 30px;
-  display: flex;
+  min-height: 10vh;
+  display: grid;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  overflow: hidden;
 }
 
 .App-main {
-  flex: 1;
-  display: flex;
+  grid: 1;
+  display: grid;
+  gap: 10px;
   justify-content: center;
-  align-items: center;
-  padding: 20px;
 }
 
-.PongCanvas-container, .Chat-container {
+.App-footer {
+  font-size: calc(10px + 2vmin);
+  color: white;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  overflow: hidden;
+  display: grid;
+  align-items: center;
+  place-content: center;
+}
+
+body {
+  height: 100%;
+  display: grid;
+  background-image: url('retrowave-neon.jpg');
+  background-size: auto;
+  background-position: center;
+}
+
+.Chat-container, .PongCanvas-container {
   background-color: #282c34;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   overflow: hidden;
-  flex: 1;
-}
-
-.PongCanvas-container {
-  margin-right: 20px;
-  margin-top: auto;
 }
 
 .Chat-container {
-  margin-left: 20px;
-  margin-top: auto;
+  width: 50%;
+  justify-self: end;
 }
 
-.App-footer {
-  background-color: #0a2150;
-  height: 20px;
-  display: flex;
-  align-items: center;
+.PongCanvas-container {
+  justify-self: start;
+}
+
+.LoginPage {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  gap: 10px;
   justify-content: center;
-  color: white;
-  border-top: 2px solid #0ff;
+  align-content: center;
+  height: 100%;
 }
