--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,68 +1,38 @@
-.Main {
-  height: 100%;
-  display: grid;
+.App {
+  text-align: center;
+}
+
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
 }
 
 .App-header {
-  min-height: 10vh;
-  display: grid;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-  border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-  overflow: hidden;
-}
-
-.App-main {
-  grid: 1;
-  display: grid;
-  gap: 10px;
-  justify-content: center;
-}
-
-.App-footer {
-  font-size: calc(10px + 2vmin);
-  color: white;
-  border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-  overflow: hidden;
-  display: grid;
-  align-items: center;
-  place-content: center;
-}
-
-body {
-  height: 100%;
-  display: grid;
-  background-image: url('retrowave-neon.jpg');
-  background-size: auto;
-  background-position: center;
-}
-
-.Chat-container, .PongCanvas-container {
   background-color: #282c34;
-  border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-  overflow: hidden;
-}
-
-.Chat-container {
-  width: 50%;
-  justify-self: end;
-}
-
-.PongCanvas-container {
-  justify-self: start;
-}
-
-.LoginPage {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
-  gap: 10px;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   justify-content: center;
-  align-content: center;
-  height: 100%;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.App-link {
+  color: #61dafb;
+}
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
